apps/jellyfin/overlays/dev/jellyfin_IngressRoute_dev.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
spec:
  routes:
    - kind: Rule
      match: Host(`dev-jellyfin.thelemonsclan.com`)
      services:
        - kind: Service
          name: jellyfin
          passHostHeader: true
          port: 8096
  # tls:
  #   certResolver: letsencrypt
